@@ -18,6 +18,7 @@
 package org.apache.cassandra.repair.messages;
 
 import java.io.IOException;
+import java.util.Objects;
 import java.util.UUID;
 
 import org.apache.cassandra.io.util.DataInputPlus;
@@ -38,6 +39,22 @@ public class CleanupMessage extends RepairMessage
     {
         super(Type.CLEANUP, null);
         this.parentRepairSession = parentRepairSession;
+    }
+
+    @Override
+    public boolean equals(Object o)
+    {
+        if (!(o instanceof CleanupMessage))
+            return false;
+        CleanupMessage other = (CleanupMessage) o;
+        return messageType == other.messageType &&
+               parentRepairSession.equals(other.parentRepairSession);
+    }
+
+    @Override
+    public int hashCode()
+    {
+        return Objects.hash(messageType, parentRepairSession);
     }
 
     public static class CleanupMessageSerializer implements MessageSerializer<CleanupMessage>
